<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/notify_importance_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_importance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_importance_tv"/>
    <RadioGroup
        android:id="@+id/notify_importance_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/notify_importance_tv">
        <RadioButton android:id="@+id/urgent_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Urgent" />
        <RadioButton android:id="@+id/high_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/High"/>
        <RadioButton android:id="@+id/medium_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Medium" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_importance_rg" />

    <TextView
        android:id="@+id/notify_privacy_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_privacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_importance_rg"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_privacy_tv"/>
    <RadioGroup
        android:id="@+id/notify_privacy_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/notify_privacy_tv">
        <RadioButton android:id="@+id/public_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Public" />
        <RadioButton android:id="@+id/secret_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Secret"/>
        <RadioButton android:id="@+id/private_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Private"/>
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_privacy_rg"/>
    <TextView
        android:id="@+id/detailed_text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notify_privacy_rg"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_text_tv"/>

    <RadioGroup
        android:id="@+id/detailed_text_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/detailed_text_tv">
        <RadioButton android:id="@+id/det_yes_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Yes"/>
        <RadioButton android:id="@+id/det_no_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/No" />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_text_rg"/>
    <TextView
        android:id="@+id/additional_action_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/additional_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailed_text_rg"
        android:gravity="center"
        android:layout_marginVertical="20dp"
        android:textSize="30sp"
        android:textColor="@color/white"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/additional_action_tv"/>
    <RadioGroup
        android:id="@+id/additional_action_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintTop_toBottomOf="@id/additional_action_tv">
        <RadioButton android:id="@+id/add_yes_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/Yes"/>
        <RadioButton android:id="@+id/add_no_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/No"
            />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/additional_action_rg"/>


</androidx.constraintlayout.widget.ConstraintLayout>