<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/notification"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginVertical="40dp"
        />
    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="40dp"
        android:hint="@string/title"
        android:textSize="20sp"
        android:textColorHint="@color/grey"
        />
    <EditText
        android:id="@+id/descv_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="40dp"
        android:hint="@string/desc"
        android:textSize="20sp"
        android:textColorHint="@color/grey"
        />
    <Button
        android:id="@+id/send_notify_btn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="80dp"
        android:text="@string/send_notify"
        android:textSize="20sp"
        android:layout_marginHorizontal="80dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>