<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.fragments.CorutinesSettingsFragment">
    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="center"
        android:text="@string/corutine_settings"
        android:textSize="40sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv"/>
    <TextView
        android:id="@+id/counts_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/counts"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        />
    <SeekBar
        android:id="@+id/count_sb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="10"
        android:min="1"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/counts_tv"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        />

    <TextView
        android:id="@+id/cur_cnt_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_start"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@+id/count_sb" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cur_cnt_tv"/>
    <CheckBox
        android:id="@+id/async_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/async"
        android:layout_marginVertical="40dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/cur_cnt_tv"/>
    <CheckBox
        android:id="@+id/stop_on_back_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_on_back"
        android:layout_marginVertical="20dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/async_cb"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stop_on_back_cb"/>
    <Button
        android:id="@+id/start_corutine_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stop_on_back_cb"
        android:layout_marginTop="160dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>